apps/services/plex/app/daemonset-nvidia.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: plex-plex-media-server-gpu
  namespace: plex
  labels:
    app: plex-media-server
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex-media-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: plex
      app.kubernetes.io/name: plex-media-server
      plex-gpu: "true"
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: plex
        app.kubernetes.io/name: plex-media-server
        plex-gpu: "true"
    spec:
      nodeSelector:
        hardware.nvidia.com/gpu: "true"
      containers:
      - name: plex-plex-media-server-pms
        image: index.docker.io/plexinc/pms-docker:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 32400
          name: pms
          protocol: TCP
        resources:
          limits:
            nvidia.com/gpu: 1
        volumeMounts:
        - mountPath: /config
          name: pms-config
        - mountPath: /transcode
          name: pms-transcode
        - mountPath: /downloads
          name: cronenberg
      volumes:
      - emptyDir: {}
        name: pms-transcode
      - name: cronenberg
        nfs:
          server: 192.168.1.182
          path: /mnt/cronenberg
      - name: pms-config
        persistentVolumeClaim:
          claimName: pms-config
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 120
