apps/services/plex/app/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex-plex-media-server
  namespace: plex
  labels:
    app: plex-media-server
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex-media-server
spec:
  serviceName: plex-plex-media-server-headless
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: plex
      app.kubernetes.io/name: plex-media-server
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: plex
        app.kubernetes.io/name: plex-media-server
    spec:
      # nodeSelector:
      #   nvidia.com/gpu.present: "true"
      containers:
      - name: plex-plex-media-server-pms
        image: index.docker.io/plexinc/pms-docker:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 32400
          name: pms
          protocol: TCP
        # Uncomment for GPU enforcement
        # resources:
        #   limits:
        #     nvidia.com/gpu: 1
        volumeMounts:
        - mountPath: /config
          name: pms-config
        - mountPath: /transcode
          name: pms-transcode
        - mountPath: /downloads
          name: cronenberg
      volumes:
      - name: pms-transcode
        emptyDir: {}
      - name: cronenberg
        nfs:
          server: 192.168.1.182
          path: /mnt/cronenberg
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 120
  volumeClaimTemplates:
  - metadata:
      name: pms-config
    spec:
      accessModes: [ReadWriteOnce]
      resources:
        requests:
          storage: 10Gi
